# Gravity_simulator

./: CMakeLists.txt  README.md
include/: Barnes_Hut_algorithm.hpp  Newtonian_gravity.hpp  application.hpp  black_hole.hpp  celestial_body.hpp  collision&merge.hpp  eventHandler.hpp  main_input_handler.hpp  planet.hpp  position_integration.hpp  setUp.hpp  sort_celestial_body.hpp  sun.hpp  vector_operator.hpp
include/arial_narrow_7/: readme.txt
src/: main.cpp
